# deepbrief-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: S9_Agents_Orchestration.md
notebooks/: 00_setup.ipynb  01_agent_loop.ipynb  02_tools_strict.ipynb  03_termination.ipynb  04_fastmcp_server.ipynb  05_mcp_transports.ipynb  06_mcp_in_agent.ipynb  07_multi_agent_a2a.ipynb  07b_langgraph_rewrite.ipynb  08_hitl_capstone.ipynb  08b_langgraph_hitl.ipynb  09_production_pipeline.ipynb
notebooks/data/: runs.db
notebooks/data/approvals/decided/: a3dc900506fd.json
src/deepbrief/: __init__.py  run.py
src/deepbrief/a2a/: agent_card.py  client.py  server.py
src/deepbrief/agents/: coordinator.py  editor.py  guards.py  langgraph_brief.py  langgraph_capstone.py  react.py  researcher.py
src/deepbrief/mcp_servers/: cache_server.py  notes_server.py
src/deepbrief/pipeline/: __init__.py  api.py  locks.py  progress.py  store.py  streams.py  worker.py
src/deepbrief/tools/: base.py  fetch_url.py  mcp_adapter.py  registry.py  web_search.py
tests/: README.md  conftest.py  test_a2a.py  test_editor.py  test_guards.py  test_mcp_servers.py  test_tools.py
tools/: build_notebook.py  make_banner.py  nb00_setup.py  nb01_agent_loop.py  nb02_tools_strict.py  nb03_termination.py  nb04_fastmcp_server.py  nb05_transports.py  nb06_mcp_in_agent.py  nb07_multi_agent_a2a.py  nb07b_langgraph.py  nb08_hitl_capstone.py  nb08b_langgraph_hitl.py  nb09_production_pipeline.py
