[project]
name = "deepbrief"
version = "0.1.0"
description = "Build Your Own Deep Research — a student lab for S7 (MCP) and S8 (Agents)"
requires-python = ">=3.11"
authors = [{ name = "Wendy Yu" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "mcp>=1.2",
    "tavily-python>=0.5",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepbrief"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
